--- a/css.css
+++ b/css.css
@@ -27,7 +27,7 @@ p {
   box-shadow: 0 0 5px #CCC;
   /*background: rgb(175, 119, 227,0.5);*/
   background: url("images/patitas.png");
-   transition: opacity 500ms;
+  transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
   z-index: 8;
@@ -142,3 +142,18 @@ p {
 }
 
 
+#contador{
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 60px;
+  margin: auto;
+  width: 6vh;
+  color: rgba(0, 0, 0,1);
+  font-size: 2vh;
+  border-radius: 1.5vh;
+  border: 0.6vh solid  rgba(141, 2, 255, 0.5);;
+  background-color: rgba(250, 250, 250, 0.6);
+  z-index: 11;
+  text-align: center;
+}
